# mocha-leaderboard

./: .dockerignore  Dockerfile  README.md  beaker.yaml  leaderboard_configuration.yaml  pyproject.toml  requirements.txt
data/: random_test_predictions.jsonl
evaluator/: README.md  dummy_answers.jsonl  dummy_metrics.jsonl  dummy_predictions.jsonl  dummy_questions.jsonl  evaluate.py
