[tool.poetry]
name = "mocha-leaderboard"
version = "0.1.0"
description = ""
authors = ["Anthony Chen <anthonc9@uci.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonlines = "^2.0.0"
allennlp = "1.1.0"
tqdm = "^4.62.3"
datasets = "^1.13.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
